[tool.poetry]
name = "rsync.net-exporter"
version = "0.1.0.dev"
description = "A Prometheus exporter for rsync.net"
authors = ["Sam Morris <sam@robots.org.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.3"
prometheus-client = "^0.20.0"
setproctitle = {version = "^1.2.3", optional = true}
prometheus-flask-exporter = "^0.23.0"
requests = "^2.31.0"
gunicorn = {version = "^21.2.0", optional = true}

[tool.poetry.group.dev.dependencies]
httpie = "^3.2.1"
mypy = "^1.0.1"
python-dotenv = "^1.0.0"
types-urllib3 = "^1.26.25.6"
pylint = "^3.1.0"
pytest = "^8.1.1"
pytest-github-actions-annotate-failures = "^0.2.0"
types-requests = "^2.31.0.20240406"
requests-mock = "^1.12.1"
trustme = "^1.1.0"
pytest-httpserver = "^1.0.10"
pip-audit = "^2.7.2"
pytest-cov = "^5.0.0"


[tool.poetry.group.github-actions.dependencies]
junitparser = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# This bit is maintained by hand
[tool.poetry.extras]
production = ["gunicorn", "setproctitle"]

[tool.mypy]
strict = true
packages = "rsync_net_exporter"

[tool.pylint.'MESSAGES CONTROL']
jobs = 0
reports = false
score = false
py-version = 3.9
disable= "line-too-long, missing-function-docstring, missing-class-docstring, missing-module-docstring"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
    "-m", "not container",
]
markers = [
    "container: tests a built container image"
]
testpaths = ["tests"]

[tool.bandit]
targets = ["src"]

[tool.ruff]
target-version = "py39"

[tool.pytest.run]
source_pkgs = ["rsync_net_exporter"]
